--- a/src/style.css
+++ b/src/style.css
@@ -374,7 +374,7 @@
         /* Modern Hero Section */
         .modern-hero {
   background: #f4f8fb;
-  padding: 80px 0 60px 0;
+  padding: 100px 40px 0px 40px;
 }
 .modern-hero-container {
   display: flex;
@@ -516,6 +516,7 @@
     max-width: 100%;
     height: 180px;
   }
+
 }
 #backToTopBtn {
     position: fixed;
