--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,7 @@
             margin-right: 10px;
         }
         .btn:last-child { margin-right: 0; }
-        .btn:hover { background: var(--primary-color);}
+        .btn:hover { background: #e85858;}
         .btn-outline {
             background: transparent;
             border: 2px solid var(--secondary-color);
@@ -360,8 +360,8 @@
             display: flex; align-items: center; justify-content: center;
         }
         .contact-form {
-            background: rgba(255,255,255,0.08);
-            padding: px;
+            background: rgb(34, 48, 74);
+            padding: 18px;
             border-radius: var(--border-radius);
         }
         .form-group { margin-bottom: 18px;}
